--- a/res/layout/activity_bebidas.xml
+++ b/res/layout/activity_bebidas.xml
@@ -11,7 +11,7 @@
     tools:context=".BebidasActivity"
     android:background="@drawable/mdpi_fondo" >
 
-      <com.example.pizza_cebanc.CustomTextView
+      <com.hersoft.pizza.CustomTextView
           android:id="@+id/total"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
@@ -31,7 +31,7 @@
 
     </GridView>
 
-    <com.example.pizza_cebanc.CustomTextView
+    <com.hersoft.pizza.CustomTextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
