--- a/res/layout/dialogopizzas.xml
+++ b/res/layout/dialogopizzas.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" 
    >
 
-    <com.example.pizza_cebanc.CustomTextView
+    <com.hersoft.pizza.CustomTextView
         android:id="@+id/tipo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="3dp" />
 
-    <com.example.pizza_cebanc.CustomTextView
+    <com.hersoft.pizza.CustomTextView
         android:id="@+id/tamano"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="3dp" />
 
-    <com.example.pizza_cebanc.CustomTextView
+    <com.hersoft.pizza.CustomTextView
         android:id="@+id/pizzas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="3dp" />
 
-	<com.example.pizza_cebanc.NumberPicker
+	<com.hersoft.pizza.NumberPicker
 	    android:id="@+id/pickerPizzas"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content" 
