--- a/res/layout/itemlistadesplegable.xml
+++ b/res/layout/itemlistadesplegable.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
  
-    <com.example.pizza_cebanc.CustomTextView
+    <com.hersoft.pizza.CustomTextView
         android:id="@+id/nombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,7 +13,7 @@
         android:layout_marginRight="5dp"
         android:textSize="28sp" />
     
-    <com.example.pizza_cebanc.CustomTextView
+    <com.hersoft.pizza.CustomTextView
         android:id="@+id/precio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
