--- a/res/layout/itemlistapedido.xml
+++ b/res/layout/itemlistapedido.xml
@@ -13,7 +13,7 @@
 	    android:layout_weight="1"
 	    android:orientation="vertical" >
 
-	    <com.example.pizza_cebanc.CustomTextView
+	    <com.hersoft.pizza.CustomTextView
 	        android:id="@+id/nombre"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
 	            android:maxHeight="60dip"
 	            android:adjustViewBounds="true"/>
 
-	        <com.example.pizza_cebanc.CustomTextView
+	        <com.hersoft.pizza.CustomTextView
 	            android:id="@+id/precio"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
@@ -42,7 +42,7 @@
 	            android:layout_marginRight="5dp"
 	            android:textSize="26sp" />
 
-	        <com.example.pizza_cebanc.CustomTextView
+	        <com.hersoft.pizza.CustomTextView
 	            android:id="@+id/x"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
@@ -52,7 +52,7 @@
 	            android:text="X"
 	            android:textSize="26sp" />
 
-	        <com.example.pizza_cebanc.CustomTextView
+	        <com.hersoft.pizza.CustomTextView
 	            android:id="@+id/numCantidad"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
