--- a/res/layout/listavacia.xml
+++ b/res/layout/listavacia.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <com.example.pizza_cebanc.CustomTextView
+    <com.hersoft.pizza.CustomTextView
         android:id="@+id/empty_list_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
