--- a/res/layout/resumen.xml
+++ b/res/layout/resumen.xml
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ResumenActivity" >
 
-    <com.example.pizza_cebanc.CustomTextView
+    <com.hersoft.pizza.CustomTextView
         android:id="@+id/pedido"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -28,7 +28,7 @@
         android:layout_weight="2.5" >
     </ExpandableListView>
 
-    <com.example.pizza_cebanc.CustomTextView
+    <com.hersoft.pizza.CustomTextView
         android:id="@+id/total"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
         android:text="@string/lista"
         android:textSize="28sp" />
     
- <com.example.pizza_cebanc.CustomTextView
+ <com.hersoft.pizza.CustomTextView
      android:id="@+id/condiciones"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
